--- a/Client/src/components/AppContactUsPage.css
+++ b/Client/src/components/AppContactUsPage.css
@@ -1,3 +1,18 @@
 .instructions {
     margin-top: 2em;
 }
+
+.map {
+    width: 100%;
+    height: 600px;
+}
+
+#message {
+    margin-top: 1em;
+    height: 180px;
+    margin-bottom: 3em;
+}
+
+.heading {
+    margin-bottom: 2em;
+}
