--- a/Client/src/components/AppPages.css
+++ b/Client/src/components/AppPages.css
@@ -7,5 +7,9 @@
     flex: 1 0 auto;
     padding: var(--space) var(--space) 0;
     width: 100%;
+    overflow-y: scroll;
+}
+.AppContent::-webkit-scrollbar{
+    width: 0em;
 }
 
