--- a/Client/src/components/Footer/AppFooter.css
+++ b/Client/src/components/Footer/AppFooter.css
@@ -1,6 +1,9 @@
 .site-footer
 {
   flex-shrink: 0;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: #2A3132;
   padding-top:10px;
   font-size:15px;
@@ -8,7 +11,7 @@
   padding-bottom:0px;
 }
 
-.footerRow{
+.site-footer .footerRow{
   margin-bottom: 0;
 }
 
@@ -44,11 +47,12 @@
 }
 .site-footer .social-icons
 {
-  text-align:left;
+  padding-inline-start: 0;
+  text-align:right;
 }
 .site-footer .social-icons a
 {
-  margin-left:15px;
+  margin-right:15px;
   border-radius:100%;
   background-color:white;
   color: #2A3132;
@@ -83,10 +87,4 @@
 .social-icons a.phone:hover
 {
   background-color:#763626
-}
-.icons
-{
-    position:absolute;
-    right: 0;
-    margin-right: 5%
 }
