--- a/Client/src/components/AppPages.css
+++ b/Client/src/components/AppPages.css
@@ -1,12 +1,21 @@
 .AppPages {
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
+    -webkit-flex-direction: column;
+    align-content: stretch;
+    -webkit-align-content: stretch;
     min-height: 100vh;
 }
-.AppContent {
+.AppContentContainer{
     flex: 1 0 auto;
+    -webkit-flex: 1 0 auto;
+    position:relative;
     padding: var(--space) var(--space) 0;
+}
+.AppContent {
     width: 100%;
+    height:100%;
     overflow-y: scroll;
 }
 .AppContent::-webkit-scrollbar{
