--- a/Client/src/components/Footer/AppFooter.css
+++ b/Client/src/components/Footer/AppFooter.css
@@ -1,7 +1,7 @@
 .site-footer
 {
   flex-shrink: 0;
-  flex: 1;
+  flex: 0 1 auto;
   flex-direction: row;
   justify-content: space-between;
   background-color: #2A3132;
@@ -25,6 +25,7 @@
 }
 .site-footer a
 {
+  display:inline-block;
   color:#737373;
 }
 .site-footer a:hover,.site-footer a:active,.site-footer a:focus,.site-footer a:hover
@@ -35,15 +36,12 @@
 .site-footer li
 {
   display:inline-block;
-  align-items: center
+  margin-right:10px;
 }
-.footer-links
+.site-footer .footer-links
 {
-  padding-left: 0;
-}
-.footer-links li
-{
-  padding-left: 15px;
+  padding-inline-start: 10px;
+  text-align:left;
 }
 .site-footer .social-icons
 {
@@ -52,12 +50,9 @@
 }
 .site-footer .social-icons a
 {
-  margin-right:15px;
-  border-radius:100%;
   background-color:white;
   color: #2A3132;
   font-size:16px;
-  display:inline-block;
   line-height:44px;
   width:44px;
   height:44px;
