started search bar functionality

--- a/Client/src/components/AppPages.css
+++ b/Client/src/components/AppPages.css
@@ -9,3 +9,18 @@
     width: 100%;
 }
 
+.bgColor button {
+    background-color: #2A3132;
+}
+
+.bgColor button:hover {
+    background-color: #2A3132;
+}
+
+.lightColor button {
+    /* background-color: #336B87; */
+}
+
+.searchBar button {
+    /* border-style: none; */
+}
