refactor to sitewide colours

--- a/Client/src/components/Footer/AppFooter.css
+++ b/Client/src/components/Footer/AppFooter.css
@@ -30,7 +30,7 @@
 }
 .site-footer a:hover,.site-footer a:active,.site-footer a:focus,.site-footer a:hover
 {
-  color:#3366cc;
+  color:#336b87;
   text-decoration:none;
 }
 .site-footer li
