--- a/Client/src/components/Screens/screens.css
+++ b/Client/src/components/Screens/screens.css
@@ -16,3 +16,15 @@ center{
      background-size: cover;
       background-position: center;
 }
+
+img.image{
+    opacity:0.5;
+    width: 100%;
+    height : 100%;
+    min-width: 200px;
+    max-width: 300px;
+}
+
+img.image:hover{
+    opacity:1
+}
